Change backdrop color

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "publisher": "eliasson",
     "license": "MIT",
     "galleryBanner": {
-        "color": "#FF0000",
+        "color": "#BD689B",
         "theme": "light"
     },
     "engines": {
